# FdF

./: CMakeLists.txt  Makefile  README.md  author  fdf  fdf.h  fdf_draw.c  fdf_few_files.sh  fdf_new_win.c  fdf_p_struct.c  fdf_reform.c  fdf_ui.c  fdf_valid.c  horiz  main.c  todo.txt
fdf.dSYM/Contents/Resources/DWARF/: fdf
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_clean_map.c  ft_fr_words.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_pfch.c  ft_plch.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  (+28 more)
maps/: 0  21.fdf  empt0.fdf  face.fdf  vert
maps/libft/: Makefile  ft_atoi.c  ft_get_next_line.c  ft_isalpha.c  ft_lstadd.c  ft_memccpy.c  ft_memmove.c  ft_memset.c  ft_putnbr.c  ft_sqrt.c  ft_strcpy.c  ft_strdel.c  ft_strlcat.c  ft_strncmp.c  ft_strrchr.c
sh/: few_files.sh  free.sh
src/: \  fdf_color_change.c  fdf_colors.c  fdf_draw.c  fdf_keys.c  fdf_new_win.c  fdf_p_struct.c  fdf_points.c  fdf_reform.c  fdf_ui.c  main.c
